fixes missaligned social icons in mobile

--- a/src/app/components/top-navigation/components/product-search/product-search.component.scss
+++ b/src/app/components/top-navigation/components/product-search/product-search.component.scss
@@ -17,7 +17,7 @@ div.product-search {
     }
 
     .product-search__social-media-icon-wrapper {
-        width: 250px;
+        width: 300px;
         display: flex;
         align-items: center;
         justify-content: space-between;
